fix [#29947] Blender crashes when duplicate bones

missing NULL check.